--- a/CollegeProject/appsettings.json
+++ b/CollegeProject/appsettings.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "AWS": {
+        "GetEndpointUrl": "https://p5fpyxi8ha.execute-api.eu-west-1.amazonaws.com/prod/",
+        "GetByIDEndpointUrl": "https://74sug7mg0d.execute-api.eu-west-1.amazonaws.com/prod/",
+        "CreateEndpointUrl": "https://7tmjsi9uk4.execute-api.eu-west-1.amazonaws.com/prod/",
+        "UpdateEndpointUrl": "https://q3worczk9d.execute-api.eu-west-1.amazonaws.com/prod/"
     }
-  },
-  "AllowedHosts": "*"
 }
