--- a/CollegeProject/Properties/launchSettings.json
+++ b/CollegeProject/Properties/launchSettings.json
@@ -3,8 +3,9 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:59966",
-      "sslPort": 44318
+        "applicationUrl": "http://localhost:59966"
+            //,
+        //"sslPort": 44318
     }
   },
     "profiles": {
@@ -22,6 +23,7 @@
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
             "applicationUrl": "https://localhost:5001;http://localhost:5000"
+            //"applicationUrl": "https://localhost:44318;"
         },
         "Docker": {
             "commandName": "Docker",
