--- a/CollegeProject/Dockerfile
+++ b/CollegeProject/Dockerfile
@@ -8,7 +8,7 @@ COPY . ./
 RUN dotnet publish -c Release -o output
 
 # Runtime image
-FROM FROM mcr.microsoft.com/dotnet/aspnet:2.1
+FROM mcr.microsoft.com/dotnet/aspnet:2.1
 WORKDIR /app
 COPY --from=build-env /app/output .
 ENTRYPOINT ["dotnet", "CollegeProject.dll"]
