--- a/CollegeProject/Dockerfile
+++ b/CollegeProject/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/aspnet:2.1 AS build-env
+FROM mcr.microsoft.com/dotnet/aspnet:2.1 AS build
 WORKDIR /app
 EXPOSE 80
 
@@ -10,5 +10,5 @@ RUN dotnet publish -c Release -o output
 # Runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:2.1
 WORKDIR /app
-COPY --from=build-env /app/output .
+COPY --from=build /app/output .
 ENTRYPOINT ["dotnet", "CollegeProject.dll"]
