change to environment variables for docker

--- a/CollegeProject/CollegeProject.csproj
+++ b/CollegeProject/CollegeProject.csproj
@@ -6,7 +6,7 @@
     <UserSecretsId>e3669fd7-a4bd-4f4a-93a9-7d88f2607db6</UserSecretsId>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <DebugType>None</DebugType>
+    <DebugType>Full</DebugType>
     <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
