--- a/CollegeProject/Properties/launchSettings.json
+++ b/CollegeProject/Properties/launchSettings.json
@@ -3,32 +3,44 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-        "applicationUrl": "http://localhost:59966"
-            //,
-        //"sslPort": 44318
+      "applicationUrl": "http://localhost:59966",
+      "sslPort": 0
     }
   },
-    "profiles": {
-        "IIS Express": {
-            "commandName": "IISExpress",
-            "launchBrowser": true,
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        },
-        "CollegeProject": {
-            "commandName": "Project",
-            "launchBrowser": true,
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "applicationUrl": "https://localhost:5001;http://localhost:5000"
-            //"applicationUrl": "https://localhost:44318;"
-        },
-        "Docker": {
-            "commandName": "Docker",
-            "launchBrowser": true,
-            "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}"
-        }
+  "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "UpdateEndpointUrl": "https://q3worczk9d.execute-api.eu-west-1.amazonaws.com/prod/",
+        "CreateEndpointUrl": "https://7tmjsi9uk4.execute-api.eu-west-1.amazonaws.com/prod/",
+        "GetByIDEndpointUrl": "https://74sug7mg0d.execute-api.eu-west-1.amazonaws.com/prod/",
+        "GetEndpointUrl": "https://p5fpyxi8ha.execute-api.eu-west-1.amazonaws.com/prod/",
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "CollegeProject": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "UpdateEndpointUrl": "https://q3worczk9d.execute-api.eu-west-1.amazonaws.com/prod/",
+        "CreateEndpointUrl": "https://7tmjsi9uk4.execute-api.eu-west-1.amazonaws.com/prod/",
+        "GetByIDEndpointUrl": "https://74sug7mg0d.execute-api.eu-west-1.amazonaws.com/prod/",
+        "GetEndpointUrl": "https://p5fpyxi8ha.execute-api.eu-west-1.amazonaws.com/prod/",
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "UpdateEndpointUrl": "https://q3worczk9d.execute-api.eu-west-1.amazonaws.com/prod/",
+        "CreateEndpointUrl": "https://7tmjsi9uk4.execute-api.eu-west-1.amazonaws.com/prod/",
+        "GetByIDEndpointUrl": "https://74sug7mg0d.execute-api.eu-west-1.amazonaws.com/prod/",
+        "GetEndpointUrl": "https://p5fpyxi8ha.execute-api.eu-west-1.amazonaws.com/prod/"
+      }
     }
+  }
 }
