--- a/CollegeProject/Properties/launchSettings.json
+++ b/CollegeProject/Properties/launchSettings.json
@@ -12,10 +12,6 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "UpdateEndpointUrl": "https://q3worczk9d.execute-api.eu-west-1.amazonaws.com/prod/",
-        "CreateEndpointUrl": "https://7tmjsi9uk4.execute-api.eu-west-1.amazonaws.com/prod/",
-        "GetByIDEndpointUrl": "https://74sug7mg0d.execute-api.eu-west-1.amazonaws.com/prod/",
-        "GetEndpointUrl": "https://p5fpyxi8ha.execute-api.eu-west-1.amazonaws.com/prod/",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
@@ -23,10 +19,6 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "UpdateEndpointUrl": "https://q3worczk9d.execute-api.eu-west-1.amazonaws.com/prod/",
-        "CreateEndpointUrl": "https://7tmjsi9uk4.execute-api.eu-west-1.amazonaws.com/prod/",
-        "GetByIDEndpointUrl": "https://74sug7mg0d.execute-api.eu-west-1.amazonaws.com/prod/",
-        "GetEndpointUrl": "https://p5fpyxi8ha.execute-api.eu-west-1.amazonaws.com/prod/",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
@@ -34,13 +26,7 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "environmentVariables": {
-        "UpdateEndpointUrl": "https://q3worczk9d.execute-api.eu-west-1.amazonaws.com/prod/",
-        "CreateEndpointUrl": "https://7tmjsi9uk4.execute-api.eu-west-1.amazonaws.com/prod/",
-        "GetByIDEndpointUrl": "https://74sug7mg0d.execute-api.eu-west-1.amazonaws.com/prod/",
-        "GetEndpointUrl": "https://p5fpyxi8ha.execute-api.eu-west-1.amazonaws.com/prod/"
-      }
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}"
     }
   }
 }
