--- a/CollegeProject.Test/CollegeProject.Test.csproj
+++ b/CollegeProject.Test/CollegeProject.Test.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.CodeCoverage" Version="16.9.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Microsoft.TestPlatform" Version="16.9.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.3">
