--- a/CollegeProject/Properties/launchSettings.json
+++ b/CollegeProject/Properties/launchSettings.json
@@ -11,9 +11,13 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development",
+            "UpdateTicketGatewayUrl": "https://iow100gg3e.execute-api.eu-west-1.amazonaws.com/prod/",
+            "GetTicketsGatewayUrl": "https://3fj5gfm1u9.execute-api.eu-west-1.amazonaws.com/prod/",
+            "GetTicketByIDGatewayUrl": "https://6sr91uo13h.execute-api.eu-west-1.amazonaws.com/prod/",
+            "PutTicketGatewayUrl": "https://e615eacszh.execute-api.eu-west-1.amazonaws.com/prod/"
+        }
     },
     "CollegeProject": {
       "commandName": "Project",
