Change dropdown style

--- a/CollegeProject/appsettings.json
+++ b/CollegeProject/appsettings.json
@@ -5,12 +5,11 @@
             "Default": "Warning"
         }
     },
-    "AllowedHosts": "*"
-        //,
-    //"AWS": {
-    //    "GetTicketsGatewayUrl": "https://p5fpyxi8ha.execute-api.eu-west-1.amazonaws.com/prod/",
-    //    "GetTicketByIDGatewayUrl": "https://74sug7mg0d.execute-api.eu-west-1.amazonaws.com/prod/",
-    //    "PutTicketGatewayUrl": "https://7tmjsi9uk4.execute-api.eu-west-1.amazonaws.com/prod/",
-    //    "UpdateTicketGatewayUrl": "https://q3worczk9d.execute-api.eu-west-1.amazonaws.com/prod/"
-    //}
+    "AllowedHosts": "*",
+    "AWS": {
+        "GetTicketsGatewayUrl": "https://p5fpyxi8ha.execute-api.eu-west-1.amazonaws.com/prod/",
+        "GetTicketByIDGatewayUrl": "https://74sug7mg0d.execute-api.eu-west-1.amazonaws.com/prod/",
+        "PutTicketGatewayUrl": "https://7tmjsi9uk4.execute-api.eu-west-1.amazonaws.com/prod/",
+        "UpdateTicketGatewayUrl": "https://q3worczk9d.execute-api.eu-west-1.amazonaws.com/prod/"
+    }
 }
