--- a/CollegeProject/Properties/launchSettings.json
+++ b/CollegeProject/Properties/launchSettings.json
@@ -1,32 +1,36 @@
 {
-    "iisSettings": {
-        "windowsAuthentication": false,
-        "anonymousAuthentication": true,
-        "iisExpress": {
-            "applicationUrl": "http://localhost:59966",
-            "sslPort": 0
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:59966",
+      "sslPort": 0
+    }
+  },
+  "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development",
+            "UpdateTicketGatewayUrl": "https://tyeqlcl693.execute-api.eu-west-1.amazonaws.com/prod/",
+            "GetTicketsGatewayUrl": "https://uiqwbl6rac.execute-api.eu-west-1.amazonaws.com/prod/",
+            "GetTicketByIDGatewayUrl": "https://3htk13qafl.execute-api.eu-west-1.amazonaws.com/prod/",
+            "PutTicketGatewayUrl": "https://puojea0nkl.execute-api.eu-west-1.amazonaws.com/prod/"
         }
     },
-    "profiles": {
-        "IIS Express": {
-            "commandName": "IISExpress",
-            "launchBrowser": true,
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        },
-        "CollegeProject": {
-            "commandName": "Project",
-            "launchBrowser": true,
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "applicationUrl": "https://localhost:5001;http://localhost:5000"
-        },
-        "Docker": {
-            "commandName": "Docker",
-            "launchBrowser": true,
-            "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}"
-        }
+    "CollegeProject": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}"
     }
+  }
 }
